# example-library

./: .gitignore  CMakeLists.txt  README.md  example-library.pc.in  script_compile.sh  sh-install.md
include/: examplepublicclass.hpp
ipc/: CMakeLists.txt  Call.hpp  CallBinder.hpp  Dispatcher.cpp  Dispatcher.hpp  Event.cpp  Event.hpp  EventLoop.cpp  EventLoop.hpp  ICallable.hpp  LogInfo.cpp  LogInfo.hpp  ipc.cpp  ipc.hpp  itc.cpp  itc.hpp  test_ipc.cpp  test_itc.cpp  tuple_utils.hpp
itc/: App.cpp  App.hpp  CMakeLists.txt  Call.hpp  Debugged.hpp  DeviceManager.cpp  DeviceManager.hpp  Dispatcher.cpp  Dispatcher.hpp  Event.cpp  Event.hpp  EventLoop.cpp  EventLoop.hpp  ICallable.hpp  LogInfo.cpp  LogInfo.hpp  MessageQueue.cpp  MessageQueue.hpp  itc.cpp  itc.hpp  main-App.cpp  main-AppCmdEventDemo.cpp  main-AppCmdEventExitDemo.cpp  main-Call.cpp  main-CallDemo.cpp  main-CallStaticDemo.cpp  main-EventDemo.cpp  main-EventStaticDemo.cpp  test_itc.cpp  test_service.cpp  tuple_utils.hpp
itc/common/: CMakeLists.txt  CommandBase.cpp  CommandBase.hpp  CommandFSM.hpp  CommandTypes.cpp  CommandTypes.hpp  CommandsContainer.hpp  CommandsQueue.cpp  CommandsQueue.hpp  ICommand.cpp  ICommand.hpp  TClassId.hpp
itc/old/: App.cpp  MessageQueue.cpp  MessageQueue.hpp  ValueObserver.hpp
src/: event.hpp  exampleprivateclass.cpp  exampleprivateclass.h  examplepublicclass.cpp  job_queue.cpp  job_queue.hpp  singleton.hpp  string_helper.hpp  timer.cpp  timer.hpp  timer_event.cpp  timer_event.hpp  trace_macro.hpp
tests/: CMakeLists.txt  LogInfo.cpp  LogInfo.hpp  main_cv_wait.cpp  main_example.cpp  main_thread.cpp  test_cv.cpp  test_cv_wait.cpp  test_thread.cpp  test_thread_join_1.cpp  test_thread_join_2.cpp  test_thread_join_3.cpp  test_thread_join_4.cpp  tst_library.cpp
